# TinkoffTradingBot

./: .gitignore  README.md  pyproject.toml
notebooks/: exploring_api.ipynb
