[tool.poetry]
name = "tinkoff_invest_bot"
version = "0.1.0"
description = "Tinkoff Invest API based algotrading robot"
authors = ["lexsirius", "wowMalow"]

[tool.poetry.dependencies]
python = "^3.8"
tinkoff-investments = "^0.2.0-beta.26"
pandas = "^1.4.2"
numpy = "^1.22.3"
plotly = "^5.7.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
